--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.1.12",
     "@react-native-firebase/app": "^14.9.4",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "base-64": "^1.0.0",
@@ -29,6 +32,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
